# VFNN

./: .pylintrc  README.md  pyproject.toml
data/model/: best_model.pt  model_meta.json
data/trends/: advertising & marketing .csv  air travel .csv  auto buyers .csv  auto financing .csv  bankruptcy .csv  business & industrial.csv  business news.csv  computer & electronics.csv  consumer electronics.csv  credit cards .csv  durable goods .csv  education .csv  finance.csv  financial planning .csv  furniture .csv  hardware.csv  insurance .csv  investing.csv  jobs .csv  luxury goods .csv  manufacturing.csv  mobile & wireless.csv  mobile.csv  mortgage .csv  real estate .csv  rental .csv  shopping .csv  small business.csv  software.csv  travel.csv
notebooks/: GARCH.ipynb  LSTM.ipynb  dev.ipynb
src/net/: __init__.py  loss.py  modules.py  train.py
src/net/parse/: __init__.py  csv_parser.py  finance_parser.py  transform_data.py  trends.txt  trends_parser.py
